# Sort

./: CMakeLists.txt  main.cpp
MyLib/: CMakeLists.txt
MyLib/include/: MyMath.h
MyLib/src/: MyMath.cpp
spdlog/: CMakeLists.txt
